fix: implement real billing order s2s ownership
